ags (1.4.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor-fixes to updating AGS_AUDIO_SIGNAL_RT_TEMPLATE

ags (1.4.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AGS_AUDIO_SIGNAL_RT_TEMPLATE
	* implemented AgsAudioSignal::rt-template property
	* improved rt-safe option

ags (1.4.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing rt-safe configuration option

ags (1.4.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented configuration of AgsThreadPool:max-unused-threads and AgsThreadPool:max-threads
	* improved ags_performance_preferences_reset() to reset super-threaded scope

ags (1.4.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsPreferences to apply conservative default configuration

ags (1.4.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* conservative default configuration
	* fixed SIGSEGV as configuring super-threaded scope audio
	* fixed SIGSEGV during ags_channel_recursive_cancel()

ags (1.4.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed mutex access in ags_apply_bpm.c
	* fixed crash during ags_recycling_context_reset() and ags_channel_recursive_play_down()
	* updated gtk-doc related files

ags (1.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed looped audio signal

ags (1.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* more-fixes to return from unneeded processing

ags (1.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed return from unneeded processing

ags (1.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented rt-safe mode
	* implemented ags-rt-stream recall
	* implemented AgsLevel, AgsLevelBox, AgsVLevelBox, AgsHScaleBox and AgsScrolledScaleBox in libags-gui
	* fixed potential SIGSEGV in ags_devout_pcm_info()

ags (1.3.6)
